# src/catalogue/session/api.py
@@ -7,8 +7,6 @@ from flask import request
 from flask import jsonify
 from . import session
 from flask import g
-from flask_paginate import Pagination, get_page_parameter
-from src.exc.app_exception import MissingFieldException
 from ...dal.pagination import get_paginated_list
 
 bp_session = Blueprint('session', 'session')
@@ -18,43 +16,46 @@ bp_session = Blueprint('session', 'session')
 def before_request_func():
     # TODO-n: extract user name from the auth
     g.requestor_uuid = 1243242636
-    pass
 
 
 @bp_session.route('/', methods=['POST'])
 def create():
     data = request.get_json()
     sessions = session.add(data)
+    print(jsonify(sessions))
     return make_response(jsonify(sessions), 201)
 
 
-@bp_session.route('/', methods=['PUT'])
-def update():
+@bp_session.route('/<session_uuid>', methods=['PUT'])
+def update(session_uuid):
     data = request.get_json()
-    sessions = session.edit(data)
+    sessions = session.edit(session_uuid, data)
     return make_response(jsonify(sessions), 202)
 
 
+@bp_session.route('/<session_uuid>', methods=['GET'])
+def get(session_uuid):
+    sessions = session.get(session_uuid)
+    return make_response(jsonify(sessions), 200)
+    
+
+@bp_session.route('/<session_uuid>/lives', methods=['GET'])
+def get_lives(session_uuid):
+    lives = session.get_lives(session_uuid)
+    return make_response("To be implemented", 200)
+
+
+@bp_session.route('/<session_uuid>', methods=['DELETE'])
+def delete(session_uuid):
+    sessions = session.delete(session_uuid)
+    return make_response(jsonify(sessions), 200)
+
+
 @bp_session.route('/', methods=['GET'])
-def get():
+def get_sessions():
     url = request.url
     start = request.args.get('start', 1)
     limit = request.args.get('limit', 1)
     search = request.args.get('search', None)
-    if 'session_uuid' in request.args:
-        sessionUUID = request.args.get('session_uuid')
-        sessions = session.get(sessionUUID)
-        return make_response(jsonify(get_paginated_list(sessions, url, start, limit)), 200)
-    else:
-        sessions = session.get_sessions(search)
-        return make_response(jsonify(get_paginated_list(sessions, url, start, limit)), 200)
-
-
-@bp_session.route('/', methods=['DELETE'])
-def delete():
-    if 'session_uuid' in request.args:
-        sessionUUID = request.args.get('session_uuid')
-        sessions = session.delete(sessionUUID)
-        return make_response(jsonify(sessions), 200)
-    else:
-        raise MissingFieldException('Session ID in the query')
+    sessions = session.get_sessions(search)
+    return make_response(jsonify(get_paginated_list(sessions, url, start, limit)), 200)
